--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 google_analytics: UA-199385187-3
-sitemap:
-    path: sitemap.xml
-    template: ./sitemap_template.xml
-    rel: false
+path: sitemap.xml
+  template: ./sitemap_template.xml
+  rel: false
+  tags: true
+  categories: true
